tests/ui/ast_rule.stderr
error[E0505]: cannot move out of `body` because it is borrowed
  --> tests/ui/ast_rule.rs:13:10
   |
11 |     let body = vec![blit];
   |         ---- binding `body` declared here
12 |     let rule = rule(&loc, lit, &body);
   |                                ----- borrow of `body` occurs here
13 |     drop(body);
   |          ^^^^ move out of `body` occurs here
14 |     let _end = rule;
   |                ---- borrow later used here
